1. check memory usage before writing sub messages to client channel and drop the messages if necessarily to avoid OOM. 2. treat following dropping message situations as ack'ed: a. message has expired. b. msg drop to avoid OOM. c. no permission. corresponding QoSxConfirmed events will be reported with 'delivered' field set to false 3. enforce memory usage constrain when channel is active so that connection could be rejected before channel read happens